tests/corpus/gitconfig/invalid/key_before_section.gitconfig
; Exercises: gitconfig does not allow global keys (global_keys = false);
; a key before any section header is a parse error
key = value
[section]
	other = ok
